style.css
body {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

canvas {
    background-color: white;
}

.d-none {
    display: none !important;
}

.startDisplay {
    position: relative;
    display: flex;
    justify-content: center;
}

.startButton {
    position: absolute;
    top: 5%;
}

.manual {
    position: absolute;
    bottom: 5%;
    color: white;
    font-weight: bold;
    font-size: 25px;
}

.customButton {
    font-weight: bold;
    color: rgb(160, 34, 10);
    background-color: rgb(255, 218, 0);
    padding: 20px;
    border-radius: 15px;
    border: none;
    cursor: pointer;
}

.customButton:hover {
    color: rgb(255, 150, 0);
    background-color: rgb(252, 222, 123)
}

.startDisplay img {
    width: 100%;
    height: 100vh;
}

